Chapter13/force-app/main/default/objects/RaceStatistics__c/RaceStatistics__c.object-meta.xml
<CustomObject>
    <label>Race Statistics</label>
    <nameField>
        <displayFormat>RCS-{00000000}</displayFormat>
        <label>Race Statastics  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Race Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>