Chapter13/force-app/main/default/objects/RaceStatistics__c/fields/FastestSector1Driver__c.field-meta.xml
<CustomField>
    <fullName>FastestSector1Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector 1 Driver</label>
    <referenceTo>Contestant__c</referenceTo>
    <relationshipLabel>Race Statistics</relationshipLabel>
    <relationshipName>RaceStatisticsFastestSector1</relationshipName>
    <type>Lookup</type>
</CustomField>