Chapter13/force-app/main/default/objects/RaceStatistics__c/fields/FastestSector2Driver__c.field-meta.xml
<CustomField>
    <fullName>FastestSector2Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector 2 Driver</label>
    <referenceTo>Contestant__c</referenceTo>
    <relationshipLabel>Race Statistics (Fastest Sector 2 Driver)</relationshipLabel>
    <relationshipName>RaceStatisticsFastestSector2</relationshipName>
    <type>Lookup</type>
</CustomField>