Chapter13/force-app/main/default/objects/RaceStatistics__c/fields/FastestSector2DriverName__c.field-meta.xml
<CustomField>
    <fullName>FastestSector2DriverName__c</fullName>
    <formula>FastestSector2Driver__r.Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector 2 Driver Name</label>
    <type>Text</type>
</CustomField>