Chapter13/force-app/main/default/objects/RaceStatistics__c/fields/FastestSector2TimeMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>FastestSector2TimeMilliseconds__c</fullName>
    <label>Sector 2 Time Milliseconds</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>