Chapter13/force-app/main/default/objects/RaceStatistics__c/fields/FastestSector3Time__c.field-meta.xml
<CustomField>
    <fullName>FastestSector3Time__c</fullName>
    <label>Sector 3 Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>